force-app/main/default/objects/Collection_WhatsApp__mdt/Collection_WhatsApp__mdt.object-meta.xml
<CustomObject>
    <label>Collection WhatsApp</label>
    <pluralLabel>Collection WhatsApps</pluralLabel>
</CustomObject>