force-app/main/default/objects/Collection_WhatsApp__mdt/fields/element_name__c.field-meta.xml
<CustomField>
    <fullName>element_name__c</fullName>
    <label>element_name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>