force-app/main/default/objects/Collection_WhatsApp__mdt/fields/namespace__c.field-meta.xml
<CustomField>
    <fullName>namespace__c</fullName>
    <label>namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>